--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter:      rouge
 title:            台文通訊
 tagline:          'Tâi-bûn Thong-sìn'
 description:      '《台文通訊》月刊（1991-），請參考：<a href="http://tgbhsuliau.nmtl.gov.tw/opencms/library/timeline/?sort=asc&sy=1&ey=3000&keyword=%E5%8F%B0%E6%96%87%E9%80%9A%E8%A8%8A" target="_blank">台語文學發展年表</a>。'
-url:              https://taibunthongsin.github.io/TaibunThongsin/
+url:              https://taibunthongsin.taigi.info/
 baseurl:          '/'
                   # the optional subpath of your site, e.g. "/blog"
                   # NB: This applies to all pages in your Jekyll site.
